fend.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: front-end
  labels:
     app: my-fend
spec:
  containers:
  - name: front-end
    image: deepakumre/frontend-blog-web
    ports:
    - containerPort: 3000
...
---
apiVersion: v1
kind: Service
metadata:
  name: my-service1
spec:
  type: NodePort
  selector:
      app: my-fend
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30011
