my-mobilepage.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx1
  labels:
    app: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  strategy: 
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: nginx
        image: avi087/Mobile-page
        ports:
        - containerPort: 80

...
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: ClusterIP
  selector:
      app: my-app
  ports:
    - port: 80
      targetPort: 80
...
